SIMKarte nicht in Taobao kaufen/BankKonto

--- a/alltag.tex
+++ b/alltag.tex
@@ -2,8 +2,9 @@
 \begin{document}
 	\subsection{日常}
 \begin{description}
-		\item[照片] \label{passforo}在延签的时候需要免冠照片，单张的大小差不多35mm*53mm也就是国内所说的2寸照片，请注意底必须是白色的，必须。 dm也可以拍，就是Passfoto，但是拍的实在是过于写实~
+		\item[照片] \label{passforo}在延签的时候需要免冠照片，单张的大小差不多35mm*45mm也就是国内所说的2寸照片，请注意底必须是白色的，必须。 dm也可以拍，就是Passfoto，但是拍的实在是过于写实~
 		\item[信用卡，现金] 刚来德国带一个中国信用卡还是很有必要的，现金尽量不要拿500欧的那种，20欧，100欧这样用起来更方便些，很多店家不收这种，，，也许长这么大都还没见过。
+		\item[德国银行卡] 这一批我们才发现，你们的流程和我们当时不一样，在国内没有开德银账户，而是把保证金转到了一个公司名下，所以说你们来德国后还需要自己再开一个银行账户，来办理转钱业务。目前我们使用的都是德意志银行Deutsche Bank的银行卡，但不得不说，转钱到账是真的慢，其他也没有什么了，2021年的银行推荐里都木的有了，哈哈~-\href{https://www.girodirekt.com/}{girodirekt} 但是作为我们和除了吐槽德意志转账慢也就没其他啥的了，还有一个不错的选择应该就是Commerzbank了，当时是一德国人问我用啥银行，我说德银，他说用啥德银Commerzbank啊~哈哈，Commerzbank据说还可以老卡带新人，一人100欧，但开银行的时候我们都要选择学生账户名字都是类似Junge Konto，这样的是没有管理费的，这两家而且基本上就是德国的大哥，不会有什么太大的问题，除此之外还有地区性的Sparkasse和新兴网络银行N26之类，初期还是找个稳一点的吧，后期慢慢探索。\label{BankKonto}，至于取钱，办了银行卡之后，可以自己再在网上搜一搜银行联盟，联盟内部取钱没有手续费，例如德银可以在邮政银行取钱，免手续费，而且后来我才知道，邮局竟然也能取钱，有天去邮局弄东西，忘带了钱，我说我去取个钱，她说这就能取，我表示十分惊讶，她说，哈什么都有可能的~
 		\item[药物] 我带了感冒药（病毒性和细菌性），腹泻，和抗过敏，目前这个情况下，还需要自己带一些ffp2防护等级的口罩。
 		\item[眼镜] 这个还是需要备一副，重新配贵不说，就怕和配眼镜的人说不清楚。。。（镀膜，树脂，防蓝光，抗污，偏色，鼻垫。。。这些词的德语怎么说。。   
 		\item[针线] 有备无患，我虽然带了，但也只是用过里面的针来取手机卡。
