--- a/ele.tex
+++ b/ele.tex
@@ -1,7 +1,7 @@
 \documentclass[doku]{subfiles}
 \begin{document}
 \begin{itemize}
-	\item 手机卡可以提前在淘宝上买个德国沃达丰的手机卡，在淘宝里搜\textbf{德国手机卡}就能搜的到，因为德国这边安装宽带是需要等待安装时间的，德国手机卡的办理也由于疫情只能线上办理，你们初期来德国办理手机卡，我建议先办Vodafone或者Telekom的，这两个属于德国的第一梯队，在网络覆盖不是那么好的德国，这两个的覆盖率还是不错的，再有就是科布伦茨现在公交车上基本都有WiFi了，德铁也逐渐铺开wifi了。\label{simKarte}
+	\item \sout{手机卡可以提前在淘宝上买个德国沃达丰的手机卡，在淘宝里搜\textbf{德国手机卡}就能搜的到},2021年三月批的学生在淘宝上买到的都是西班牙的手机号，初期无法办理银行开户，所以大家就联系自己的手机运营商，开通一个境外流量就行。假如需要自己办理宽带，德国这边安装宽带是需要等待安装时间的，德国手机卡的办理也由于疫情只能线上办理，你们初期来德国办理手机卡，我建议先办Vodafone或者Telekom的，这两个属于德国的第一梯队，在网络覆盖不是那么好的德国，这两个的覆盖率还是不错的，再有就是科布伦茨现在公交车上基本都有WiFi了，德铁也逐渐铺开wifi了。\label{simKarte}
 	\item 笔记本电脑还是有必要带的，作为理科生，我想说，，苹果入手需谨慎
 	\item ipad这样的可以手写的设备，我看朋友用的都还是挺方便的，看自己需需求吧，我还是比较喜欢纸质的感觉。
 	\item 手机，国内的手机这里不会有什么太大问题，苹果手机无缝替换，安卓手机能用安装谷歌框架是最好不过的，因为我的手机有欧洲版，所以可以直接安装欧版系统
