--- a/neu.tex
+++ b/neu.tex
@@ -8,5 +8,8 @@
 								  添加Conrad介绍\ref{conrad}\\
 								  
 	\subsection{17.02.2021-13:52} 添加米饭(电饭锅)\ref{Reis}， 照片\ref{passforo}， 修正SIM卡\ref{simKarte}
+	\subsection{17.02.2021-16:34} 更正照片尺寸照片\ref{passforo}
 								  
+	\subsection{04.03.2021-08:57} 更新手机卡的介绍，不建议淘宝购买\ref{simKarte}\\
+	添加银行介绍\ref{BankKonto}
 \end{document}
